kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vfc
spec:
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      name: vfc
  template:
    metadata:
      labels:
        name: vfc
        run: vfc
    spec:
      restartPolicy: OnFailure
      containers:
      - args:
        - "node"
        - "infc.js"
        - "-f"
        - "Folderfile.example"
        stdin: false
        stdinOnce: false
        tty: false
        image: versioning-file-cabinet:latest
        imagePullPolicy: IfNotPresent
        name: follow
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/app/tmp
          name: tmpdir
        resources:
          requests:
            cpu: 10m
            memory: 100m
          limits:
            memory: 5G
            cpu: 500m
        ports:
        - containerPort: 3001
          name: http
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 1
      volumes:
      - name: tmpdir
        emptyDir: {}
